# idml2docbook

./: .env.sample  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  install.sh  install_dependencies.sh  pyproject.toml  requirements.txt  test.dbk
.github/workflows/: publish.yml
idml2docbook/: __init__.py  __main__.py  core.py  idml2hubxml.py  install_dependencies.py  map.py  utils.py
tests/: hello_world.idml  test.dbk  test_idml2docbook.py
tests/Package_test/: test.indd
tests/bollo/: README.md  bollo.dbk  bollo.xml
tests/css_transform_direction/: README.md  css_transform_direction.dbk  css_transform_direction.xml
tests/hello_world/: hello_world.dbk  hello_world.xml
tests/package/: test.dbk  test.xml
tests/package/Package_test/: test.idml  test.indd
tests/package/Package_test/Links/: Tchaik5mov3waltz3.tiff
